boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_blittable_record_with_methods_point.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
assertion_line: 552
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Demo
{
    [StructLayout(LayoutKind.Sequential)]
    public readonly record struct Point(
        double X,
        double Y
    )
    {
        internal static Point Decode(WireReader reader) =>
            new Point(
                reader.ReadF64(),
                reader.ReadF64()
            );

        internal int WireEncodedSize() =>
            8 +
            8;

        internal void WireEncodeTo(WireWriter wire)
        {
            wire.WriteF64(this.X);
            wire.WriteF64(this.Y);
        }

        public static Point Origin()
        {
            return NativeMethods.PointOrigin();
        }

        public double Distance()
        {
            return NativeMethods.PointDistance(this);
        }

        public Point Add(Point other)
        {
            return NativeMethods.PointAdd(this, other);
        }
    }
}
